gradient not working - not tangent to the loss function

--- a/labs/notebooks/non_linear_classifiers/exercise_1.ipynb
+++ b/labs/notebooks/non_linear_classifiers/exercise_1.ipynb
@@ -16,10 +16,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "%load_ext autoreload\n",
@@ -28,10 +26,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import lxmls.readers.sentiment_reader as srs\n",
@@ -42,11 +38,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'input': array([[1., 1., 1., ..., 0., 0., 0.],\n",
+       "        [0., 0., 0., ..., 0., 0., 0.],\n",
+       "        [0., 0., 2., ..., 0., 0., 0.],\n",
+       "        ...,\n",
+       "        [0., 0., 0., ..., 0., 0., 0.],\n",
+       "        [0., 0., 4., ..., 0., 0., 0.],\n",
+       "        [0., 0., 0., ..., 0., 0., 0.]]),\n",
+       " 'output': array([0, 1, 0, ..., 1, 0, 1])}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data.datasets['train']"
    ]
@@ -67,10 +79,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from lxmls.deep_learning.utils import Model, glorot_weight_init, index2onehot, logsumexp\n",
@@ -142,10 +152,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "learning_rate = 0.05\n",
@@ -155,10 +163,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "model = NumpyLogLinear(\n",
@@ -170,11 +176,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initial accuracy 51.25 %\n"
+     ]
+    }
+   ],
    "source": [
     "# Define number of epochs and batch size\n",
     "num_epochs = 10\n",
@@ -199,11 +211,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1: accuracy 60.50 %\n",
+      "Epoch 2: accuracy 74.00 %\n",
+      "Epoch 3: accuracy 76.75 %\n",
+      "Epoch 4: accuracy 77.75 %\n",
+      "Epoch 5: accuracy 78.25 %\n",
+      "Epoch 6: accuracy 79.00 %\n",
+      "Epoch 7: accuracy 79.75 %\n",
+      "Epoch 8: accuracy 79.75 %\n",
+      "Epoch 9: accuracy 81.25 %\n",
+      "Epoch 10: accuracy 81.75 %\n"
+     ]
+    }
+   ],
    "source": [
     "# Epoch loop\n",
     "for epoch in range(num_epochs):\n",
@@ -226,7 +253,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
