--- a/labs/notebooks/non_linear_classifiers/exercise_3.ipynb
+++ b/labs/notebooks/non_linear_classifiers/exercise_3.ipynb
@@ -9,10 +9,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "%load_ext autoreload\n",
@@ -21,10 +19,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import lxmls.readers.sentiment_reader as srs\n",
@@ -43,10 +39,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from lxmls.deep_learning.utils import Model, glorot_weight_init\n",
@@ -124,10 +118,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "model = PytorchLogLinear(\n",
@@ -139,11 +131,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1: accuracy 60.50 %\n",
+      "Epoch 2: accuracy 74.00 %\n",
+      "Epoch 3: accuracy 76.75 %\n",
+      "Epoch 4: accuracy 77.75 %\n",
+      "Epoch 5: accuracy 78.25 %\n",
+      "Epoch 6: accuracy 79.00 %\n",
+      "Epoch 7: accuracy 79.75 %\n",
+      "Epoch 8: accuracy 79.75 %\n",
+      "Epoch 9: accuracy 81.25 %\n",
+      "Epoch 10: accuracy 81.75 %\n"
+     ]
+    }
+   ],
    "source": [
     "# Hyper-parameters\n",
     "num_epochs = 10\n",
@@ -174,7 +181,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
